add LOGOUT Handler
