# internal/api/router/execs_router.go
@@ -18,7 +18,7 @@ func execsRouter(mux *http.ServeMux) {
 	// mux.HandleFunc("POST /execs/{id}/updatepassword", handlers.ExecsHandler)
 	
 	mux.HandleFunc("POST /execs/login", handlers.LoginHandler)
-	// mux.HandleFunc("POST /execs/logout", handlers.ExecsHandler)
+	mux.HandleFunc("POST /execs/logout", handlers.LogoutHandler)
 	// mux.HandleFunc("POST /execs/forotpassword", handlers.ExecsHandler)
 	// mux.HandleFunc("POST /execs/resetpassword/reset/{resetcode}", handlers.ExecsHandler)
 }
